页面初步搭建

--- a/pom.xml
+++ b/pom.xml
@@ -177,6 +177,25 @@
       <scope>provided</scope>
     </dependency>
 
+    <!-- 添加servlet3.0核心包 -->
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>3.0.1</version>
+    </dependency>
+    <dependency>
+      <groupId>javax.servlet.jsp</groupId>
+      <artifactId>javax.servlet.jsp-api</artifactId>
+      <version>2.3.2-b01</version>
+    </dependency>
+
+    <!--thymeleaf-->
+    <dependency>
+      <groupId>org.thymeleaf</groupId>
+      <artifactId>thymeleaf-spring5</artifactId>
+      <version>3.0.9.RELEASE</version>
+    </dependency>
+
     <!-- log end -->
     <!-- 映入JSON -->
     <dependency>
