--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,5 +1,5 @@
 driver=com.mysql.cj.jdbc.Driver
-jdbc=mysql://localhost:3306/gentelella?serverTimezone=UTC
+jdbc=jdbc:mysql://localhost:3306/test?serverTimezone=UTC
 user=root
 password=123456
 minPoolSize=10
@@ -8,4 +8,4 @@ maxIdleTime=600
 acquireIncrement=3
 maxStatements=1000
 initialPoolSize=10
-idleConnectionTestPeriod=60
+idleConnectionTestPeriod=10
