--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,5 +1,5 @@
 driver=com.mysql.cj.jdbc.Driver
-jdbc=jdbc:mysql://localhost:3306/test?serverTimezone=UTC
+jdbc=jdbc:mysql://localhost:3306/shiro?serverTimezone=UTC
 user=root
 password=123456
 minPoolSize=10
