修改实体类及sql

--- a/pom.xml
+++ b/pom.xml
@@ -162,6 +162,7 @@
       <version>1.7.25</version>
       <scope>test</scope>
     </dependency>
+    <!-- log4j end -->
 
     <!-- jstl -->
     <dependency>
